# server-auth

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt  test-requirements.txt
.github/workflows/: test.yml
auth_api_key_group/i18n/: zh_CN.po
auth_jwt/: README.rst
auth_jwt/i18n/: auth_jwt.pot
auth_jwt_demo/: README.rst  __manifest__.py
auth_jwt_demo/readme/: DESCRIPTION.md  USAGE.md
auth_jwt_demo/tests/: test_auth_jwt_demo.py
auth_oauth_autologin/: README.rst  __manifest__.py
auth_oauth_autologin/controllers/: main.py
auth_oauth_autologin/i18n/: auth_oauth_autologin.pot  it.po
auth_oauth_autologin/tests/: __init__.py  test_oauth_auto_login.py
auth_oauth_autologin/views/: assets.xml
auth_oauth_filter_by_domain/: README.rst
auth_oauth_multi_token/: README.rst
auth_oidc/i18n/: fr.po  it.po
auth_oidc/models/: auth_oauth_provider.py
auth_oidc/tests/: test_auth_oidc_auth_code.py
auth_saml/: README.rst
auth_saml/models/: auth_saml_provider.py
auth_saml/readme/: HISTORY.md
auth_saml/tests/: test_pysaml.py
auth_signup_verify_email/: README.rst
auth_user_case_insensitive/: README.rst
cross_connect_client/: README.rst
cross_connect_client/controllers/: cross_connect.py
cross_connect_client/models/: cross_connect_server.py
cross_connect_client/tests/: test_cross_connect_client.py
cross_connect_server/: README.rst
impersonate_login/views/: impersonate_log.xml
password_security/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
user_log_view/: README.rst
users_ldap_mail/: README.rst
(+24 files in other folders)
