[project]
name = "odoo-addons-oca-server-auth"
version = "18.0.20251013.0"
dependencies = [
    "odoo-addon-auth_admin_passkey==18.0.*",
    "odoo-addon-auth_api_key==18.0.*",
    "odoo-addon-auth_api_key_group==18.0.*",
    "odoo-addon-auth_api_key_server_env==18.0.*",
    "odoo-addon-auth_jwt==18.0.*",
    "odoo-addon-auth_oauth_filter_by_domain==18.0.*",
    "odoo-addon-auth_oauth_multi_token==18.0.*",
    "odoo-addon-auth_oidc==18.0.*",
    "odoo-addon-auth_oidc_environment==18.0.*",
    "odoo-addon-auth_saml==18.0.*",
    "odoo-addon-auth_session_timeout==18.0.*",
    "odoo-addon-auth_signup_verify_email==18.0.*",
    "odoo-addon-auth_user_case_insensitive==18.0.*",
    "odoo-addon-base_user_empty_password==18.0.*",
    "odoo-addon-base_user_show_email==18.0.*",
    "odoo-addon-impersonate_login==18.0.*",
    "odoo-addon-password_security==18.0.*",
    "odoo-addon-user_log_view==18.0.*",
    "odoo-addon-users_ldap_mail==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
